--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
-spring.datasource.url=jdbc:mysql://localhost/db_springboot_backend1
+spring.datasource.url=jdbc:mysql://localhost/db_springboot_backend1?serverTimezone=America/Lima
 spring.datasource.username=root
 spring.datasource.password=sasa
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
 logging.level.org.hibernate.SQL=debug
+spring.jackson.time-zone = America/Lima
+spring.jackson.locale=es_PE
